<resources>
    <string name="app_name">FlashbackMusicV000</string>
    <string name="playSongs">SONGS PLAYING</string>
    <string name="playAlbum">ALBUM PLAYING</string>
    <string name="action_settings">Settings</string>
    <string name="songs">SONGS</string>
    <string name="albums">ALBUMS</string>
    <string name="flash">FLASHBACK MODE</string>
    <string name="title_activity_song_playing">SongPlayingActivity</string>
    <string name="favorited">✓</string>
    <string name="disliked">ｘ</string>
    <string name="neutral">+</string>
    <string name="title_activity_album_queue">AlbumQueue</string>
    <string name="title_activity_album_list_songs">AlbumListSongs</string>
    <string name="title_activity_album_song_list">AlbumSongList</string>
    <string name="title_activity_get_location">Map</string>

    <string name="sign_in_request">Welcome to Flashback Music. Please sign in
        to your Google account.</string>
    <string name="email_address">Email:</string>
    <string name="password">Password:</string>
    <string name="anonymous">Continue as Anonymous</string>
    <string name="download">Enter the URL to Download:</string>

</resources>
